routetable.tf
#create  route table for the public subnet
resource "aws_route_table" "PUB-RTB" {
  vpc_id = aws_vpc.CGR_VPC.id

  tags = merge(
    var.tags,
    {
      Name = "CGR-PUB-RTB"
    },
  )
}

resource "aws_route" "pub-rtb-route" {
  route_table_id         = aws_route_table.PUB-RTB.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.CGR-IGW.id
}

#associate the public subnets to the public route table
resource "aws_route_table_association" "pub-subnets-assoc" {
  subnet_id      = aws_subnet.CGR-Subnet.id
  route_table_id = aws_route_table.PUB-RTB.id
}
